Fix hero title alignment: expand container to full width in flex hero

--- a/css/style.css
+++ b/css/style.css
@@ -302,6 +302,7 @@ ul { list-style: none; }
   z-index: 1;
   padding-top: 120px;
   padding-bottom: 80px;
+  width: 100%;
 }
 
 .hero__content {
